Mobile project sorting dropdown

--- a/src/custom.scss
+++ b/src/custom.scss
@@ -2,4 +2,4 @@ $theme-colors: (
 "info": #00908d,
 );
 
-@import "../node_modules/bootstrap/scss/bootstrap";
+@import "../node_modules/bootstrap/scss/bootstrap.scss";
